--- a/AadharApp/src/app/admin/admin.component.css
+++ b/AadharApp/src/app/admin/admin.component.css
@@ -3,3 +3,10 @@
     background-image:url('aadhar.jpg');
     background-position:50% 50%;
   }
+
+  input.ng-invalid.ng-touched {
+    border: 1px solid red;
+  }
+
+
+
